fixed box spacing

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -38,7 +38,7 @@ h2, h3 {
 }
 
 .mentorbox {
-  margin-bottom: 100px;
+  margin-bottom: 30px;
   height: 120px;
   border-radius: 5px;
   overflow: hidden;
